Fix overflow problem of cursor

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,10 @@
 .introduction {
-    height: 100vh;
-    width: 65%;
-    margin: 0;
-    background-color: black;
-    padding: 15% 0 0 10%;
+  height: 100vh;
+  width: 65%;
+  margin: 0;
+  background-color: black;
+  padding: 15% 0 0 10%;
+  overflow: hidden;
 }
 
 .title {
